ViTables ChangeLog
==================
** September 15, 2009 **
Fixed some minor bugs.

Prepare things for the next release.

** August 24, 2009 **
Some icons have been updated.

The zoomCell module has been debugged and refactored.

** August 22, 2009 **
The plugins framework has been debugged and its usability has been improved.

The time_series plugin has been debugged and refactored.

** August 21, 2009 **
The examples directory has been reworked.

** August 20, 2009 **
A couple of modules have been sanitised (bad variable names changed).

** August 15, 2009 **
The docBrowser package has been reworked a little bit.

Splash screen has been updated.

** August 13, 2009 **
Icons have been updated. About ViTables dialog enhanced with a Thanks To page.

Fixed a bug introduced when the use of Qt resources was dropped.

** August 07, 2009 **
Makefile files and other unneeded stuff have been removed.

** August 06, 2009 **
The plugins framework has been made more robust.

Fixed some small problems in the new build system.

** August 05, 2009 **
Last 2 commits backed out + Dima's patches merged + backed out commits restored

** July 29, 2009 **
Added support for packages to the plugins framework.

** July 28, 2009 **
A simple plugin framework has been implemented.

** July 21, 2009 **
The "Node properties" dialog is generated automatically (via Qt Designer) now.

** May 01, 2009 **
Added missing licensing information to several files.

Sources of Users Guide are now distributed in the ViTables tarball.

Procedure for generating the usersguide has been updated.

INSTALL.txt and setup.py have been updated.

HTML documentation uses utf-8 encoding now.

** March 11, 2009 **
Code for creating DBDoc objects was confusing and has been refactored.

Added a couple of (subtle) usability improvements.

** March 10, 2009 **
The Preferences subpackage has been updated.

Fixed a small bug in the "Select a file for opening" dialog.

** March 08, 2009 **